<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/metadata/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go1_description</name>
  <version>0.0.0</version>
  <description>Unitree Go1 Description for ROS2</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 运行依赖（适配 Gazebo/控制/RVIZ2） -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
