<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_legged_control</name>
  <version>0.0.0</version>
  <description>Unitree ROS2 Control Effort Joint Controller</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  <depend>unitree_legged_msgs</depend>
  <depend>urdf</depend>
  <depend>control_toolbox</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/plugins/unitree_legged_control_plugins.xml"/>
  </export>
</package>
